--- a/requirements.txt
+++ b/requirements.txt
@@ -68,6 +68,7 @@ numpy==2.2.5
 orjson==3.10.18
 ormsgpack==1.9.1
 packaging==24.2
+pandas==2.2.3
 parso==0.8.4
 pathspec==0.12.1
 platformdirs==4.3.8
@@ -89,6 +90,7 @@ Pygments==2.19.1
 pytest==8.3.5
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.0
+pytz==2025.2
 pywin32==310
 PyYAML==6.0.2
 pyzmq==26.4.0
@@ -108,6 +110,7 @@ traitlets==5.14.3
 typing-inspect==0.9.0
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+tzdata==2025.2
 urllib3==2.4.0
 wcwidth==0.2.13
 xxhash==3.5.0
